@@ -1,3 +1,9 @@
+2008-12-08  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/FS_Info.h,
+	  src/FS_Info.cc
+	  src/GParted_Core.cc: Reduced FS_Info cache disk reads.
+
 2008-12-07  Curtis Gedak  <gedakc@gmail.com>
 
 	* include/Utils.h,
